--- a/albionboxes/common/friend_finder/components/friend_binary_sensor.yaml
+++ b/albionboxes/common/friend_finder/components/friend_binary_sensor.yaml
@@ -4,9 +4,9 @@
   id: friend_present_binary_sensor
   lambda: |-
     if (id(${ibeacon_sensor_id_prefix}_ble_presence_binary_sensor).state) {
-      ESP_LOGD("friend_present_binary_sensor", "we have detected friends!");
+      ESP_LOGV("friend_present_binary_sensor", "we have detected friends!");
       return true;
     } else {
-      ESP_LOGD("friend_present_binary_sensor", "no friends present");
+      ESP_LOGV("friend_present_binary_sensor", "no friends present");
       return false;
     }
