--- a/albionboxes/dev_friend_finder_alpha.yaml
+++ b/albionboxes/dev_friend_finder_alpha.yaml
@@ -39,6 +39,9 @@ packages:
   friend_check_interval: !include common/friend_finder/utils/friend_check_interval.yaml
 #  ibeacon_broadcast: !include { file: common/friend_finder/ble/ble_beacon_broadcast.yaml, vars: { ibeacon_uuid: "${friend_finder_alpha_uuid}" } }
 
+switch:
+  - <<: !include common/friend_finder/components/motor_active_switch.yaml
+
 # https://esphome.io/components/button/index.html
 button:
   - <<: !include common/friend_finder/buttons/test_motor_button.yaml
