Saving these changes around the light

--- a/albionboxes/common/friend_finder/components/motor_active_switch.yaml
+++ b/albionboxes/common/friend_finder/components/motor_active_switch.yaml
@@ -7,13 +7,9 @@
   assumed_state: true
   # https://esphome.io/components/switch/
   restore_mode: RESTORE_DEFAULT_OFF
-#  lambda: |-
-#    if (id(some_binary_sensor).state) {
-#      return true;
-#    } else {
-#      return false;
-#    }
-#  turn_on_action:
-#    - switch.turn_on: switch2
-#  turn_off_action:
-#    - switch.turn_on: switch1
+  turn_on_action:
+    - script.execute:
+        id: turn_on_atom_motor_active_light
+        delay_ms: 1
+  turn_off_action:
+    - light.turn_off: atom_light
