--- a/albionboxes/common/friend_finder/utils/default_friend_finder_esphome.yaml
+++ b/albionboxes/common/friend_finder/utils/default_friend_finder_esphome.yaml
@@ -13,4 +13,5 @@
     on_boot:
       then:
         - lambda: "adc_power_acquire();"
+        - light.turn_off: atom_light
         - output.turn_off: vibration_motor
