--- a/albionboxes/common/friend_finder/scripts/turn_on_atom_motor_active_light_script.yaml
+++ b/albionboxes/common/friend_finder/scripts/turn_on_atom_motor_active_light_script.yaml
@@ -1,4 +1,5 @@
 # https://esphome.io/guides/automations.html#script-component
+# would be cool to do on and off and handle whether a friend is present?
 script:
   - id: turn_on_atom_motor_active_light
     parameters:
@@ -10,6 +11,7 @@ script:
           red: 100%
           green: 100%
           blue: 1.0
+          effect: rainbow
 #      - delay: !lambda return delay_ms;
 #      - output.set_level:
 #          id: vibration_motor
