--- a/albionboxes/dev_waveshare_board.yaml
+++ b/albionboxes/dev_waveshare_board.yaml
@@ -24,22 +24,22 @@ packages:
   status_sensor: !include common/status_sensor.yaml
   internal_temp: !include common/internal_temp.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
-#  fonts: !include common/fonts.yaml
+  fonts: !include common/fonts.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
 #  button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 39 } }
 
 spi:
-  clk_pin: 15
-  mosi_pin: 12
+  clk_pin: 13
+  mosi_pin: 14
 
 # https://esphome.io/components/display/waveshare_epaper.html
-#display:
-#  - platform: waveshare_epaper
-#    cs_pin: GPIO16
-#    dc_pin: GPIO11
-#    busy_pin: GPIO9
-#    reset_pin: GPIO10
-#    model: 7.50in-bV2
+display:
+  - platform: waveshare_epaper
+    cs_pin: 15
+    dc_pin: 27
+    busy_pin: 25
+    reset_pin: 26
+    model: 7.50in-bV2
 #    full_update_every: 30
-#    lambda: |-
-#      it.print(0, 0, id(roboto), "Hello World!");
+    lambda: |-
+      it.print(0, 0, id(roboto), "Hello World!");
