--- a/albionboxes/common/light_strip.yaml
+++ b/albionboxes/common/light_strip.yaml
@@ -1,19 +1,41 @@
 # https://esphome.io/components/light/neopixelbus.html
 # https://esphome.io/components/light/
 light:
-  - platform: neopixelbus
-#    type: GRB
-#    type: RGBW
-    type: GRBW
-#    type: RGBW
+#  - platform: neopixelbus
+##    type: GRB
+##    type: RGBW
+##    type: GRBW
+##    type: RGBW
 #    type: RGB
-    variant: SK6812
+#    variant: SK6812
+#    pin: ${light_data_pin}
+#    num_leds: ${num_leds}
+#    restore_mode: RESTORE_DEFAULT_OFF
+#    id: led_strip
+#    name: "${friendly_name} Light Strip"
+#    effects:
+#      - random:
+#      - flicker:
+#      - addressable_rainbow:
+
+# https://esphome.io/components/light/esp32_rmt_led_strip
+  - platform: esp32_rmt_led_strip
+    rgb_order: GRB
     pin: ${light_data_pin}
     num_leds: ${num_leds}
+    is_wrgb: true
     restore_mode: RESTORE_DEFAULT_OFF
+    rmt_channel: 0
+    chipset: SK6812
     id: led_strip
     name: "${friendly_name} Light Strip"
     effects:
       - random:
       - flicker:
       - addressable_rainbow:
+      - addressable_scan:
+      - addressable_color_wipe:
+      - addressable_twinkle:
+      - addressable_random_twinkle:
+      - addressable_fireworks:
+      - addressable_flicker:
