And updating lights and outputs to work best

--- a/albionboxes/common/m5stickcplus2/lights.yaml
+++ b/albionboxes/common/m5stickcplus2/lights.yaml
@@ -3,8 +3,10 @@ light:
     output:  builtin_led
     name: ${friendly_name} Led
     id: led1
+    restore_mode: RESTORE_DEFAULT_OFF
 
   - platform: monochromatic
     output:  backlight
     name: ${friendly_name} Backlight
     id: display_bl
+    restore_mode: RESTORE_DEFAULT_OFF
