--- a/albionboxes/prod_volcano_goober_v2.yaml
+++ b/albionboxes/prod_volcano_goober_v2.yaml
@@ -1,10 +1,10 @@
 # https://github.com/wifwucite/esphome-ble-controller
 substitutions:
-  node_name: volcanogoober
-  friendly_name: Volcano Goober
+  node_name: volcanov2goober
+  friendly_name: Volcano Goober V2
   area: Living Room
-  comment: "Still needs a lot of work"
-  box_config_file_name: prod_volcano_goober
+  comment: "Trying to run the Volcano goober on a ESP32-S3"
+  box_config_file_name: prod_volcano_goober_v2
   # FIXME: need to fill this out a bit
   volcano_mac_address: !secret volcano_mac_address
   autoconnect: "true"
@@ -25,10 +25,10 @@ substitutions:
 
 packages:
   esphome: !include common/default_esphome.yaml
-  logging: !include common/default_logger.yaml
+  logging: !include common/s3_logger.yaml
   wifi: !include common/wifi.yaml
-  esp32: !include common/m5atom_device.yaml
-  light: !include { file: common/atom_light.yaml, vars: { light_pin: 27 } }
+  esp32: !include common/m5atoms3lite_device.yaml
+  light: !include { file: common/atom_light.yaml, vars: { light_pin: 35 } }
   reset_button: !include common/reset_button.yaml
   networking: !include common/networking.yaml
   http: !include common/http.yaml
@@ -40,5 +40,5 @@ packages:
   internal_temp: !include common/internal_temp.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
-  button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 39 } }
+  button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 41 } }
   volcano_prototype: !include common/volcano_prototype_v1.yaml
