Working light strip!

--- a/albionboxes/common/ambient_light_sensor.yaml
+++ b/albionboxes/common/ambient_light_sensor.yaml
@@ -3,4 +3,4 @@
   name: "${friendly_name} Illuminance"
   id: ambient_light_sensor
   address: 0x23
-  update_interval: 1s
+  update_interval: "${light_sensor_update_interval}"
