--- a/albionboxes/dev_cabinet_light_strip.yaml
+++ b/albionboxes/dev_cabinet_light_strip.yaml
@@ -6,7 +6,8 @@ substitutions:
   box_config_file_name: dev_cabinet_light_strip
   light_strip_data_pin: "22"
 #  light_strip_data_pin: "26"
-  light_strip_num_leds: "100"
+  # 26 for 2 long sides and
+  light_strip_num_leds: "26"
   cabinet_light_sensor_update_interval: "1s"
 
 packages:
