--- a/albionboxes/dev_light_strip.yaml
+++ b/albionboxes/dev_light_strip.yaml
@@ -4,9 +4,13 @@ substitutions:
   area: Dev
   comment: "This is the first dev device for using a simple LED strip"
   box_config_file_name: dev_light_strip
+  light_strip_name: "RGBW"
+  light_strip_id: "dev_light_strip"
   light_strip_data_pin: "22"
+  light_strip_rmt_channel: "0"
+  light_strip_icon: "mdi:led-strip-variant"
 #  light_strip_data_pin: "26"
-  light_strip_num_leds: "100"
+  light_strip_num_leds: "50"
 
 packages:
   esphome: !include common/default_esphome.yaml
@@ -27,4 +31,6 @@ packages:
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
   button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 39 } }
-  light_strip: !include { file: common/light_strip.yaml, vars: { light_data_pin: "${light_strip_data_pin}", num_leds: "${light_strip_num_leds}" } }
+
+light:
+  - <<: !include { file: common/light_strip.yaml, vars: { led_strip_name: "${light_strip_name}", led_strip_id: "${light_strip_id}", light_data_pin: "${light_strip_data_pin}", rmt_channel: "${light_strip_rmt_channel}", led_strip_icon: "${light_strip_icon}",num_leds: "${light_strip_num_leds}" } }
