Saving latest version

--- a/albionboxes/prod_living_room_cabinet_light_strip.yaml
+++ b/albionboxes/prod_living_room_cabinet_light_strip.yaml
@@ -11,7 +11,8 @@ substitutions:
   choc_light_strip_icon: "mdi:led-strip-variant"
   snack_light_strip_name: "Snack"
   snack_light_strip_id: "snack_light_strip"
-  snack_light_strip_data_pin: "23"
+#  snack_light_strip_data_pin: "23"
+  snack_light_strip_data_pin: "19"
   snack_light_strip_rmt_channel: "1"
   snack_light_strip_icon: "mdi:led-strip"
 #  light_strip_data_pin: "26"
