--- a/albionboxes/prod_living_room_cabinet_light_strip.yaml
+++ b/albionboxes/prod_living_room_cabinet_light_strip.yaml
@@ -18,6 +18,10 @@ substitutions:
   light_strip_num_leds: "71"
   cabinet_light_sensor_update_interval: "1s"
   atom_button_bin: "39"
+  red_button_name: "Snack"
+  red_button_pin: "23"
+  blue_button_name: "Chocolate"
+  blue_button_pin: "33"
 
 packages:
   esphome: !include common/default_esphome.yaml
@@ -47,9 +51,10 @@ light:
   - <<: !include { file: common/light_strip.yaml, vars: { led_strip_name: "${snack_light_strip_name}", led_strip_id: "${snack_light_strip_id}", light_data_pin: "${snack_light_strip_data_pin}", rmt_channel: "${snack_light_strip_rmt_channel}", led_strip_icon: "${snack_light_strip_icon}",num_leds: "${light_strip_num_leds}" } }
 
 binary_sensor:
+  # built in button
   - platform: gpio
     pin:
-      number: ${atom_button_bin}
+      number: "${atom_button_bin}"
       inverted: true
     name: "${friendly_name} Button"
     on_release:
@@ -58,3 +63,23 @@ binary_sensor:
         - light.toggle: "${choc_light_strip_id}"
         - light.toggle: "${snack_light_strip_id}"
         - logger.log: "Done with ${friendly_name} button tapped!"
+  # extended buttons
+  - platform: gpio
+    pin:
+      number: "${red_button_pin}"
+      inverted: true
+    name: "${friendly_name} ${red_button_name} Red Button"
+    on_press:
+      then:
+        - logger.log: "Red Button Clicked"
+        - light.toggle: "${snack_light_strip_id}"
+
+  - platform: gpio
+    pin:
+      number: "${blue_button_pin}"
+      inverted: true
+    name: "${friendly_name} ${blue_button_name} Blue Button"
+    on_press:
+      then:
+        - logger.log: "Blue Button Clicked"
+        - light.toggle: "${choc_light_strip_id}"
