--- a/albionboxes/dev_icarus_alpha.yaml
+++ b/albionboxes/dev_icarus_alpha.yaml
@@ -6,6 +6,8 @@ substitutions:
   area: Dev
   comment: "This is the first dev device for interacting with Icarus"
   box_config_file_name: dev_icarus_alpha
+  uart_baud_rate: "115200"
+  modbus_controller_address: "0x1"
 
 packages:
   esphome: !include common/default_esphome.yaml
@@ -27,9 +29,29 @@ packages:
   albion_boxes_info: !include common/albionboxes_info.yaml
   button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 39 } }
 
+# https://esphome.io/components/uart.html
+uart:
+  id: modbus_uart
+  tx_pin: GPIO19
+  rx_pin: GPIO22
+  baud_rate: "${uart_baud_rate}"
+
 # https://esphome.io/components/modbus
+modbus:
+  uart_id: modbus_uart
 
 # https://esphome.io/components/modbus_controller.html
+modbus_controller:
+- id: modbus_device
+  address: "${modbus_controller_address}"   ## address of the Modbus slave device on the bus
+  modbus_id: modbus1
+  setup_priority: -10
 
-
-
+sensor:
+- platform: modbus_controller
+  modbus_controller_id: modbus_device
+  name: "Battery Capacity"
+  register_type: holding
+  address: 0x9001    ## address of the register inside the Modbus slave device
+  unit_of_measurement: "AH"
+  value_type: U_WORD
