Trying to run it maybe

--- a/albionboxes/prod_media_console_light_strip.yaml
+++ b/albionboxes/prod_media_console_light_strip.yaml
@@ -4,23 +4,18 @@ substitutions:
   area: Living Room
   comment: "This powers a light strip on living room media console cabinet"
   box_config_file_name: prod_media_console_light_strip
-  choc_light_strip_name: "Chocolate"
-  choc_light_strip_id: "chocolate_light_strip"
-  choc_light_strip_data_pin: "19"
-  choc_light_strip_rmt_channel: "0"
-  choc_light_strip_icon: "mdi:led-strip-variant"
-  snack_light_strip_name: "Snack"
-  snack_light_strip_id: "snack_light_strip"
-  snack_light_strip_data_pin: "22"
-  snack_light_strip_rmt_channel: "1"
-  snack_light_strip_icon: "mdi:led-strip"
+  edge_light_strip_name: "Edge"
+  edge_light_strip_id: "edge_light_strip"
+  edge_light_strip_data_pin: "19"
+  edge_light_strip_rmt_channel: "0"
+  edge_light_strip_icon: "mdi:led-strip-variant"
   # 26 for 2 long sides and 19 for the short side
   light_strip_num_leds: "71"
   cabinet_light_sensor_update_interval: "1s"
   atom_button_bin: "39"
   red_button_name: "Snack"
   red_button_pin: "23"
-  blue_button_name: "Chocolate"
+  blue_button_name: "Edge"
   blue_button_pin: "33"
 
 packages:
@@ -43,12 +38,11 @@ packages:
   albion_boxes_info: !include common/albionboxes_info.yaml
   i2c_bus: !include common/default_i2c.yaml
 
-sensor:
-  - <<: !include { file: common/ambient_light_sensor.yaml, vars: { light_sensor_update_interval: "${cabinet_light_sensor_update_interval}" } }
+#sensor:
+#  - <<: !include { file: common/ambient_light_sensor.yaml, vars: { light_sensor_update_interval: "${cabinet_light_sensor_update_interval}" } }
 
 light:
-  - <<: !include { file: common/light_strip.yaml, vars: { led_strip_name: "${choc_light_strip_name}", led_strip_id: "${choc_light_strip_id}", light_data_pin: "${choc_light_strip_data_pin}", rmt_channel: "${choc_light_strip_rmt_channel}", led_strip_icon: "${choc_light_strip_icon}",num_leds: "${light_strip_num_leds}" } }
-  - <<: !include { file: common/light_strip.yaml, vars: { led_strip_name: "${snack_light_strip_name}", led_strip_id: "${snack_light_strip_id}", light_data_pin: "${snack_light_strip_data_pin}", rmt_channel: "${snack_light_strip_rmt_channel}", led_strip_icon: "${snack_light_strip_icon}",num_leds: "${light_strip_num_leds}" } }
+  - <<: !include { file: common/light_strip.yaml, vars: { led_strip_name: "${edge_light_strip_name}", led_strip_id: "${edge_light_strip_id}", light_data_pin: "${edge_light_strip_data_pin}", rmt_channel: "${edge_light_strip_rmt_channel}", led_strip_icon: "${edge_light_strip_icon}",num_leds: "${light_strip_num_leds}" } }
 
 #binary_sensor:
 #  # built in button
@@ -60,8 +54,7 @@ light:
 #    on_release:
 #      then:
 #        - logger.log: "${friendly_name} Button tapped"
-#        - light.toggle: "${choc_light_strip_id}"
-#        - light.toggle: "${snack_light_strip_id}"
+#        - light.toggle: "${edge_light_strip_id}"
 #        - logger.log: "Done with ${friendly_name} button tapped!"
 #  # extended buttons
 #  - platform: gpio
@@ -72,7 +65,6 @@ light:
 #    on_press:
 #      then:
 #        - logger.log: "Red Button Clicked"
-#        - light.toggle: "${snack_light_strip_id}"
 #
 #  - platform: gpio
 #    pin:
@@ -82,4 +74,4 @@ light:
 #    on_press:
 #      then:
 #        - logger.log: "Blue Button Clicked"
-#        - light.toggle: "${choc_light_strip_id}"
+#        - light.toggle: "${edge_light_strip_id}"
