And that might be a little better

--- a/albionboxes/prod_media_console_light_strip.yaml
+++ b/albionboxes/prod_media_console_light_strip.yaml
@@ -9,8 +9,8 @@ substitutions:
   edge_light_strip_data_pin: "19"
   edge_light_strip_rmt_channel: "0"
   edge_light_strip_icon: "mdi:led-strip-variant"
-  # 26 for 2 long sides and 19 for the short side
-  light_strip_num_leds: "71"
+  # 33 for 2 short sides and 69 for the long side
+  light_strip_num_leds: "135"
   cabinet_light_sensor_update_interval: "1s"
   atom_button_bin: "39"
   red_button_name: "Snack"
