--- a/albionboxes/prod_media_console_light_strip.yaml
+++ b/albionboxes/prod_media_console_light_strip.yaml
@@ -1,6 +1,6 @@
 substitutions:
-  node_name: mediaconsolelightstrip
-  friendly_name: Living Room Media Console Light Strip
+  node_name: mccabinetlightstrip
+  friendly_name: Living Room Media Console Cabinet Light Strip
   area: Living Room
   comment: "This powers a light strip on living room media console cabinet"
   box_config_file_name: prod_media_console_light_strip
@@ -11,18 +11,11 @@ substitutions:
   edge_light_strip_icon: "mdi:led-strip-variant"
   # 33 x 2 for vertical sides and 27 x 2 for the horizontal side
   light_strip_num_leds: "120"
-#  light_strip_num_leds: "33"
-  cabinet_light_sensor_update_interval: "1s"
-  atom_button_bin: "39"
-  red_button_name: "Snack"
-  red_button_pin: "23"
-  blue_button_name: "Edge"
-  blue_button_pin: "33"
 
 packages:
   esphome: !include common/default_esphome.yaml
-#  logging: !include common/default_logger.yaml
-  logging: !include common/debug_logger.yaml
+  logging: !include common/default_logger.yaml
+#  logging: !include common/debug_logger.yaml
   wifi: !include common/wifi.yaml
   esp32: !include common/m5atom_device.yaml
   light: !include { file: common/atom_light.yaml, vars: { light_pin: 27 } }
@@ -37,38 +30,7 @@ packages:
   internal_temp: !include common/internal_temp.yaml
   dashboard_import: !include common/default_dashboard_import.yaml
   albion_boxes_info: !include common/albionboxes_info.yaml
+  button: !include { file: common/default_atom_button.yaml, vars: { button_pin: 39 } }
 
 light:
   - <<: !include { file: common/light_strip.yaml, vars: { led_strip_name: "${edge_light_strip_name}", led_strip_id: "${edge_light_strip_id}", light_data_pin: "${edge_light_strip_data_pin}", rmt_channel: "${edge_light_strip_rmt_channel}", led_strip_icon: "${edge_light_strip_icon}",num_leds: "${light_strip_num_leds}" } }
-
-#binary_sensor:
-#  # built in button
-#  - platform: gpio
-#    pin:
-#      number: "${atom_button_bin}"
-#      inverted: true
-#    name: "${friendly_name} Button"
-#    on_release:
-#      then:
-#        - logger.log: "${friendly_name} Button tapped"
-#        - light.toggle: "${edge_light_strip_id}"
-#        - logger.log: "Done with ${friendly_name} button tapped!"
-#  # extended buttons
-#  - platform: gpio
-#    pin:
-#      number: "${red_button_pin}"
-#      inverted: true
-#    name: "${friendly_name} ${red_button_name} Red Button"
-#    on_press:
-#      then:
-#        - logger.log: "Red Button Clicked"
-#
-#  - platform: gpio
-#    pin:
-#      number: "${blue_button_pin}"
-#      inverted: true
-#    name: "${friendly_name} ${blue_button_name} Blue Button"
-#    on_press:
-#      then:
-#        - logger.log: "Blue Button Clicked"
-#        - light.toggle: "${edge_light_strip_id}"
